[gd_scene load_steps=3 format=3 uid="uid://xysnoajbdhqy"]

[ext_resource type="Script" path="res://addons/panda_time/resources/windows/reminder/window_reminder.gd" id="1_jnou7"]
[ext_resource type="Texture2D" uid="uid://dx22g4cm3pl2e" path="res://addons/panda_time/resources/images/logout.png" id="2_c0aai"]

[node name="WindowReminder" type="Window"]
title = "PandaTimeReminder"
position = Vector2i(20, 36)
size = Vector2i(350, 150)
unresizable = true
borderless = true
always_on_top = true
transparent = true
script = ExtResource("1_jnou7")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 48
theme_override_constants/margin_top = 17
theme_override_constants/margin_right = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="TimeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DismissButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Dismiss Incoming Break"

[node name="SnoozeButton" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Snooze"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SnoozeHSlider" type="HSlider" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 7
size_flags_vertical = 6
min_value = 30.0
max_value = 300.0
step = 30.0
value = 30.0

[node name="SnoozeLabel" type="Label" parent="Control/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "05:00"

[node name="MarginContainerCollapse" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 35.0
grow_vertical = 2
theme_override_constants/margin_left = 7
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 10

[node name="ColorRect" type="ColorRect" parent="Control/MarginContainerCollapse"]
layout_mode = 2

[node name="QuitButton" type="TextureButton" parent="Control/MarginContainerCollapse"]
custom_minimum_size = Vector2(35, 35)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_c0aai")
texture_pressed = ExtResource("2_c0aai")
texture_hover = ExtResource("2_c0aai")
texture_disabled = ExtResource("2_c0aai")
texture_focused = ExtResource("2_c0aai")
ignore_texture_size = true
stretch_mode = 5
flip_h = true

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/DismissButton" to="." method="_on_dismiss_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/SnoozeButton" to="." method="_on_snooze_button_pressed"]
[connection signal="drag_ended" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/HBoxContainer/SnoozeHSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="pressed" from="Control/MarginContainerCollapse/QuitButton" to="." method="_on_quit_button_pressed"]
